<resources>
    <string name="app_name">心流</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">首页</string>
    <string name="statistics">统计</string>
    <string name="me">我的</string>
    <string name="start_meditation">开始</string>
    <string name="setting">设置</string>
    <string name="help_center">帮助中心</string>
    <string name="term_of_serivce">使用条款</string>
    <string name="privacy">隐私政策</string>
    <string name="minutes">分钟</string>
    <string name="wear_state">佩戴状态</string>
    <string name="wear_tip_content">佩戴头环，根据提示调整电极接触。提示点对应头环上最左、中间和最右的电极点。</string>
    <string name="wear_state_left">左边</string>
    <string name="wear_state_right">右边</string>
    <string name="wear_state_normal">连接正常</string>
    <string name="brainwave_spectrum">脑电波频谱</string>
    <string name="change_during_meditation">在冥想中的变化</string>
    <string name="about_brainwave">脑电波各频率比的变化反映了冥想时精神状态的变化。</string>
    <string name="about_hrv">HRV随冥想状态而变化。 在放松状态下，HRV通常较高。 通过长期的冥想练习，HRV的整体水平将提高。</string>
    <string name="about_hr">通常，心率的变化是无序的。 通过长期训练，可以在冥想过程中以一定的周期性节律看到心率。 此时，呼吸和心跳达到协调状态。</string>
    <string name="about_relaxation_attention">如果您没有长期的冥想训练，则您在特定大脑状态下的脑电波会集中。 当您聚焦时，“放松”值通常较低，而当您放松时，“关注”值较低。 注意和放松是互斥的。 经过长期的冥想练习，脑电波的传播范围更加广泛甚至均匀。 您可以同时获得高分的注意力和放松度，从而放松身心并集中精力。 在这种状态下，更容易获得灵感和创造力。</string>
    <string name="about_pressure">深呼吸训练可以有效地减轻压力，长期冥想训练可以提高压力的适应能力。 压力和松弛图在物理和生理水平上反映您的松弛状态。</string>
    <string name="brainwave">脑电波</string>
    <string name="hrv">心率变异性（HRV）</string>
    <string name="heart_rate">心率</string>
    <string name="realxation_and_attention">专注度&#038;放松度</string>
    <string name="pressure">压力值</string>
    <string name="learn_more">更多</string>
    <string name="about">关于</string>
    <string name="tip1_content">我们提供了 3 种不同尺寸的橡胶带，请选择合适的尺寸，确保传感器贴合前额皮肤。</string>
    <string name="tip1_title">提示 1</string>
    <string name="tip2_content">调整头戴，让传感器贴合你额头中间位置的皮肤。</string>
    <string name="tip2_title">提示 2</string>
    <string name="tip3_content">传感器需要和皮肤直接接触，所以不能有头发在传感器和皮肤的之间。</string>
    <string name="tip3_title">提示 3</string>
    <string name="tip4_content">脸部的肌肉活动，比如眼球运动和说话，会引起信号干扰。如果信号不是很稳定，试着让你的脸和眼睛放松。</string>
    <string name="tip4_title">提示 4</string>
    <string name="tip5_content">护肤品、化妆品和皮肤上的油脂会阻碍传感器检测信号。用湿巾擦拭皮肤，可能会改善你的信号。</string>
    <string name="tip5_title">提示 5</string>
    <string name="tip6_content">干性皮肤或者在环境引起的皮肤干燥会影响传感器检测信号。用湿巾擦拭传感器可以改善信号。</string>
    <string name="tip6_title">提示 6</string>
    <string name="tip7_content">每次调整后，需要 30 秒到 1 分钟左右的时间来检测信号，请耐心等待。</string>
    <string name="tip7_title">提示 7</string>
    <string name="device_time_left">剩余%1$d小时</string>
    <string name="device_min_left">剩余%1$d分钟</string>
    <string name="activity_device_status_device_status">设备状态</string>
    <string name="activity_device_status_sensor_contact_check">佩戴检测</string>
    <string name="activity_device_status_11">佩戴头戴并根据引导调整传感器</string>
    <string name="sensor_contact_check">佩戴检测</string>
    <string name="skip">跳过</string>
    <string name="checking">检测中...</string>
    <string name="well_done">干得好!</string>
    <string name="emotion">情绪面板</string>
    <string name="activity_device_turn_on_1">Press and hold the button until the indicator lights up. If the light is not on, charge the device first and try again after 10 minutes.</string>
    <string name="activity_device_turn_on_next">Next</string>
    <string name="dialogExitTitle">Exit Now?</string>
    <string name="dialogExitContent">Meditation complete, exit and generate report.</string>
    <string name="dialogCancel">Cancel</string>
    <string name="dialogExit">Exit</string>
    <string name="fragment_data_18">Connect the headband to show data</string>
    <string name="fragment_data_real_time_biodata">Real-time Biodata</string>
    <string name="fragment_data_edit">Edit</string>
    <string name="fragment_data_edit_done">Done</string>
    <string name="fragment_data_edit_19">Drag and drop to reorder dashboard.</string>
    <string name="meditation_time_less_5_min_tip_unguide">The report requires at least 3 minutes of meditation.</string>
    <string name="meditation_time_lesson_5_min_tip">Meditation time must not less than 3 minutes!</string>
    <string name="min">min</string>
    <string name="hour">hour</string>
    <string name="hours">hours</string>
    <string name="activity_meditation_time_setting_meditation_stop_time">Meditation Stop Time</string>
    <string name="activity_meditation_time_setting_custom">Custom</string>
    <string name="activity_meditation_time_setting_15_min"> 15 min</string>
    <string name="activity_meditation_time_setting_end_sound">End Sound</string>
    <string name="activity_meditation_time_setting_12">When meditation timer ends, we will play the end sound to remind you.</string>
    <string name="loginTip">We won\'t post anything with your Facebook. By signing means you agree with our Terms and
        Privacy
    </string>
    <string name="fragment_me_martín_abasto">Martín Abasto</string>
    <string name="fragment_me_flowtime_headband">Flowtime Headband</string>
    <string name="fragment_me_settings">Settings</string>
    <string name="fragment_me_flowtime">Flowtime</string>
    <string name="fragment_me_support">Support</string>
    <string name="fragment_me_sign_out">Sign out</string>
    <string name="fragment_me_app_version">1.0.0(22)</string>
    <string name="fragment_me_copyright">© 2019 Entertech Ltd.</string>
    <string name="logout_tip">Logout will not delete any data. You can still log in with this account.</string>
    <string name="OK">OK</string>
    <string name="CANCEL">CANCEL</string>
    <string name="web_title_help_center">Help Center</string>
    <string name="web_title_term_of_use">Terms of use</string>
    <string name="web_title_privacy">Privacy</string>
    <string name="activity_login_or">or</string>
    <string name="fragment_count_total">Total</string>
    <string name="fragment_count_time_min">Time(min)</string>
    <string name="fragment_count_lessons">Lessons</string>
    <string name="fragment_count_days">Days</string>
    <string name="fragment_count_streak">Streak</string>
    <string name="fragment_count_current_streak">Current Streak</string>
    <string name="fragment_count_longest_streak">Longest Streak</string>
    <string name="fragment_count_0">0</string>
    <string name="fragment_overview_detail_22">Biosensing Meditation Headband provide rich data feedback including brainwaves, heart rate, heart rate variability, etc. to perceive your performance better.</string>
    <string name="fragment_overview_detail_sample_data">Sample Data 👇</string>
    <string name="fragment_overview_detail_meditation_time">Meditation Time</string>
    <string name="fragment_overview_detail_23">The meditation time is shorter than the average of last 7 times.</string>
    <string name="fragment_overview_detail_statistics">Statistics</string>
    <string name="fragment_overview_detail_head">🎊🎉This is my</string>
    <string name="fragment_overview_detail_foot">--th</string>
    <string name="fragment_overview_detail_meditation">meditation</string>
    <string name="fragment_overview_detail_24">✌️And I have meditated for</string>
    <string name="fragment_overview_detail_minutes">-- minutes</string>
    <string name="fragment_overview_detail_from_the_beginning">from the beginning!👏👏</string>
    <string name="fragment_overview_detail_course">Course</string>
    <string name="fragment_overview_detail_25">The course I learned is:</string>
    <string name="fragment_overview_detail_empty">--</string>
    <string name="fragment_overview_detail_from">from</string>
    <string name="device_introduce_meet_flowtime">Meet Flowtime</string>
    <string name="flowtime">Flowtime</string>
    <string name="activity_device_introduce_flowtime">Flowtime</string>
    <string name="activity_device_introduce_biosensing_meditation_headband">Biosensing Meditation Headband</string>
    <string name="activity_device_introduce_8">Master meditation by brainwave &#038; heart-rate biosensing technology.</string>
    <string name="activity_device_introduce_9">Regulate meditation performance by visualized rich data.</string>
    <string name="activity_device_introduce_10">Minimum light. Maximum comfort. Unique elegant design. Weight: 28g.</string>
    <string name="activity_device_introduce_connect_device">Connect Device</string>
    <string name="activity_device_introduce_know_more">Know More</string>
    <string name="device_open_button">Next</string>
    <string name="activity_can_not_connect_can_not_connect">Can not connect?</string>
    <string name="activity_can_not_connect_2">Please press and hold the power button for 4 seconds. The paired device will have a blue flashing light.</string>
    <string name="activity_can_not_connect_3">If there is no light after the button is held for more than 4 seconds, please charge the device first. Try again in 10 minutes.</string>
    <string name="activity_can_not_connect_4">Make sure the device is near your phone. If there are other Bluetooth smart devices around, please put them away.</string>
    <string name="activity_can_not_connect_5">Check the Bluetooth status in the system settings to make sure Bluetooth is turned on.</string>
    <string name="activity_can_not_connect_6">If Bluetooth is already on, turn it off and on.</string>
    <string name="activity_can_not_connect_7">After above operations are done, return to search for the device.</string>
    <string name="webTitleDeviceCanNotConnect">Can not connect?</string>
    <string name="turn_deveice_on">Turn Device On</string>
    <string name="connecting">Connecting...</string>
    <string name="no_device_found">No device found</string>
    <string name="try_connect">Try again</string>
    <string name="hardware_version">Hardware version</string>
    <string name="firmware_version">Firmware version</string>
    <string name="bluetooth_address">Bluetooth address</string>
    <string name="know_more_about_flowtime_headband">Know more about Flowtime headband</string>
    <string name="can_t_connect_to_the_device">Can\'t connect to the device?</string>
    <string name="activity_sensor_contact_check_sensor_contact_check">Wearing Guide</string>
    <string name="device_permission">Allow related permissions for Bluetooth connection</string>
    <string name="device_permission_location">Enable location access</string>
    <string name="device_permission_location_tip">In order to protect user privacy, Android 6.0 or later versions needs
        you to apply for location access when accessing the Unique Device Identifier.
    </string>
    <string name="device_permission_ble">Turn on system Bluetooth</string>
    <string name="update_completed">Update Completed</string>
    <string name="update_complete_tip">The device will be restarted and connected automatically to your phone. Please keep the device near the phone.</string>
    <string name="update">Update</string>
    <string name="device_update_title">Frimware Update</string>
    <string name="update_tip_title">What\'s new?</string>
    <string name="updating">Updating...</string>
    <string name="updating_tip">It takes a few minutes to update the firmware.Please keep the device near your phone.</string>
    <string name="update_completed_tip">The device will be restarted and connected automatically to your phone.Please keep the device near the phone.</string>
    <string name="update_failed">Update Failed</string>
    <string name="update_failed_tip">Please go back to connect the device again and retry.</string>
    <string name="app_update_title">App Update</string>
    <string name="brainwave_about_text">The change of the power ratio of the brainwaves reflects the change of mental state during meditation.</string>
</resources>