<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity.DeviceCanNotConnectActivity"
        android:orientation="vertical"
        android:background="@color/white">

    <include layout="@layout/layout_common_title"/>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


            <TextView
                    android:layout_marginTop="@dimen/activity_margin"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:textColor="#0f161e"
                    android:lineSpacingExtra="5sp"
                    android:gravity="center_horizontal"
                    android:text="@string/activity_can_not_connect_can_not_connect"
                    />

            <LinearLayout
                    android:layout_marginTop="@dimen/margin_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="@dimen/activity_margin"
                    android:layout_marginRight="@dimen/activity_margin">

                <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/vector_drawable_good"/>

                <TextView
                        android:layout_marginLeft="4dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="#666666"
                        android:letterSpacing="-0.02"
                        android:lineSpacingExtra="8sp"
                        android:text="@string/activity_can_not_connect_2"
                        />
            </LinearLayout>


            <LinearLayout
                    android:layout_marginTop="@dimen/margin_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="@dimen/activity_margin"
                    android:layout_marginRight="@dimen/activity_margin">

                <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/vector_drawable_good"/>

                <TextView
                        android:layout_marginLeft="4dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="#666666"
                        android:letterSpacing="-0.02"
                        android:lineSpacingExtra="8sp"
                        android:text="@string/activity_can_not_connect_3"
                        />
            </LinearLayout>

            <LinearLayout
                    android:layout_marginTop="@dimen/margin_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="@dimen/activity_margin"
                    android:layout_marginRight="@dimen/activity_margin">

                <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/vector_drawable_good"/>

                <TextView
                        android:layout_marginLeft="4dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="#666666"
                        android:letterSpacing="-0.02"
                        android:lineSpacingExtra="8sp"
                        android:text="@string/activity_can_not_connect_4"
                        />
            </LinearLayout>

            <LinearLayout
                    android:layout_marginTop="@dimen/margin_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="@dimen/activity_margin"
                    android:layout_marginRight="@dimen/activity_margin">

                <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/vector_drawable_good"/>

                <TextView
                        android:layout_marginLeft="4dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="#666666"
                        android:letterSpacing="-0.02"
                        android:lineSpacingExtra="8sp"
                        android:text="@string/activity_can_not_connect_5"
                        />
            </LinearLayout>

            <LinearLayout
                    android:layout_marginTop="@dimen/margin_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="@dimen/activity_margin"
                    android:layout_marginRight="@dimen/activity_margin">

                <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/vector_drawable_good"/>

                <TextView
                        android:layout_marginLeft="4dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="#666666"
                        android:letterSpacing="-0.02"
                        android:lineSpacingExtra="8sp"
                        android:text="@string/activity_can_not_connect_6"
                        />
            </LinearLayout>

            <LinearLayout
                    android:layout_marginTop="@dimen/margin_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="@dimen/activity_margin"
                    android:layout_marginRight="@dimen/activity_margin">

                <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/vector_drawable_good"/>

                <TextView
                        android:layout_marginLeft="4dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="#666666"
                        android:letterSpacing="-0.02"
                        android:lineSpacingExtra="8sp"
                        android:text="@string/activity_can_not_connect_7"
                        />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>